# boinc-applet

./: ChangeLog  Makefile.am  configure.ac  gen_po.sh
po/: POTFILES.in  boinc_applet.pot  en.po  en_GB.po
po/locale/en/LC_MESSAGES/: boinc_applet.mo
src/: Makefile.am  about_win.in  boinc_applet.in  boinc_client.in  org.mate.panel.BoincMonitorApplet.mate-panel-applet.in  org.mate.panel.BoincMonitorApplet.mate-panel-applet.in.in  org.mate.panel.applet.BoincMonitor.gschema.xml  org.mate.panel.applet.BoincMonitor.gschema.xml.in.in  org.mate.panel.applet.BoincMonitorAppletFactory.service.in  prefs_win.in  rpc.in  status_win.in
